--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "bufferhelper": "^0.2.0",
     "commander": "^2.5.0",
     "config": "^1.7.0",
+    "gulp": "^3.9.1",
     "handlebars": "^2.0.0",
     "marked": "^0.3.2",
     "object-assign": "^1.0.0",
