--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "config": "^1.7.0",
     "handlebars": "^2.0.0",
     "marked": "^0.3.2",
+    "minimist": "^1.2.0",
     "object-assign": "^1.0.0",
     "open": "0.0.5",
     "shelljs": "^0.3.0"
