koa-response-time

--- a/code/node-koa/package.json
+++ b/code/node-koa/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "koa": "^2.0.0",
+    "koa-response-time": "^2.0.0",
     "koa-router": "^7.0.1",
     "koa-static": "^2.0.0"
   }
