--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/twang281314/iscs_frontEnd#readme",
   "dependencies": {
+    "babel-preset-es2015": "^6.24.1",
     "bufferhelper": "^0.2.0",
     "commander": "^2.5.0",
     "config": "^1.7.0",
