--- a/package.json
+++ b/package.json
@@ -28,5 +28,9 @@
     "object-assign": "^1.0.0",
     "open": "0.0.5",
     "shelljs": "^0.3.0"
+  },
+  "devDependencies": {
+    "browser-sync": "^2.18.13",
+    "gulp": "^3.9.1"
   }
 }
